test-suite/valid/event-minimal.glx
events:
  event-12345678:
    version: "1.0"
    type: "birth"
