test-suite/invalid/event-missing-place.glx
# Invalid: References non-existent place
events:
  event-12345678:
    version: "1.0"
    type: birth
    place: place-nonexistent
